base balance account
system variables pending, some validations pending.

--- a/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-management.component.html
@@ -37,7 +37,7 @@
                             </ul>
                         </div>
                         <div class="col-12 col-md-6 col-lg-4">
-                            <a *ngIf="checkDate()" href="{{meeting.callURL}}"><i class="ft-video"></i> Iniciar llamada.</a>
+                            <a *ngIf="checkDate()" (click)="startMeeting()"><i class="ft-video"></i> Iniciar llamada.</a>
                         </div>
                     </div>
                     <hr>
