--- a/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
+++ b/src/main/webapp/app/entities/focus-group/focus-group-form.component.html
@@ -18,14 +18,15 @@
                     </div>
                     <div class="col-sm-4 col-12 col-md-12 col-lg-4">
                         <div class="form-group">
-                            <label class="form-control-label" for="field_name">Cantidad de participantes</label>
-                            <input #floatAmount="ngModel" type="number" class="form-control" name="participantsAmount" id="field_amount"
+                            <label class="form-control-label" for="field_amount">Cantidad de participantes</label>
+                            <input #floatAmount="ngModel" type="number" class="form-control" name="participantsAmount"
+                                   id="field_amount"
                                    [(ngModel)]="focusGroup.participantsAmount" required/>
                             <small class="form-text text-muted danger" *ngIf="!floatAmount.valid && (floatAmount.dirty ||
                                  floatAmount.touched)">Este campo es requerido.
                             </small>
                             <small class="form-text text-muted danger" *ngIf="!validateParticipantsAmount()">
-                                La cantidad tiene que ser un numero entero mayor a 5 y menor o igual a 10.
+                                La cantidad tiene que ser un numero entero mayor o igual a 4 y menor o igual a 12.
                             </small>
                         </div>
                     </div>
@@ -130,7 +131,19 @@
                     </div>
                 </div>
             </div>
-            <h4 class="form-section"></h4>
+            <h4 class="form-section"><i class="ft-credit-card"></i>Costo</h4>
+            <div class="card col-xl-12 col-lg-12 col-md-12">
+                <div class="card-block row">
+                    <h4 class="col-xl-9 col-lg-9 col-md-9 col-sm-9">El costo del grupo de enfoque es de:</h4>
+                    <h4 *ngIf="!focusGroup.participantsAmount; else validParticipantAmount"
+                        class="col-xl-3 col-lg-3 col-md-3 col-sm-3 text-right card-title">25.000,00 CRC.</h4>
+                    <ng-template #validParticipantAmount>
+                        <h4 class="col-xl-3 col-lg-3 col-md-3 col-sm-3 text-right card-title">
+                            {{formatedCost}}.
+                        </h4>
+                    </ng-template>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-auto">
                     <button type="button" id="cancel-save" class="btn btn-raised btn-warning mr-1"
@@ -140,7 +153,7 @@
                 </div>
                 <div
                     *ngIf="editForm.form.invalid || isSaving || !validateAnswers() || !validEndDate() ||
-                     !validatePassingGrade() || !validateParticipantsAmount(); else validEditBtn"
+                     !validatePassingGrade() || !validateParticipantsAmount() || insufficientBalance(); else validEditBtn"
                     [ngbPopover]="popoverText"
                     triggers="mouseenter:mouseleave" popoverTitle="Formulario inválido." class="col-auto">
                     <button type="submit" id="save-entity-invalid" [disabled]="true"
@@ -149,16 +162,21 @@
                     </button>
                 </div>
                 <ng-template #popoverText>
-                    <small class="display-block">Por favor, asegúrese de que todos los campos estén completos.</small>
-                    <small>Si está usando una prueba de aptitud, necesita asignar una nota mínima y marcar la respuesta
-                        deseada de cada
-                        pregunta.
+                    <small *ngIf="editForm.form.invalid || !validateParticipantsAmount() || !validEndDate()"
+                           class="display-block">
+                        Por favor, asegúrese de que todos los campos estén completos.
+                    </small>
+                    <small *ngIf="!validatePassingGrade() || !validateAnswers()">
+                        Si está usando una prueba de aptitud, necesita asignar una nota mínima y marcar la respuesta
+                        deseada de cada pregunta.
+                    </small>
+                    <small class="display-block" *ngIf="insufficientBalance()">
+                        El balance de su cuenta no es suficiente para crear este grupo de enfoque.
                     </small>
                 </ng-template>
                 <ng-template #validEditBtn>
                     <div class="col-auto">
-                        <button type="submit" id="save-entity-valid"
-                                class="btn btn-raised btn-primary">
+                        <button type="submit" id="save-entity-valid" class="btn btn-raised btn-primary">
                             <i class="ft-save"></i>&nbsp;<span> Guardar</span>
                         </button>
                     </div>
