Added dynamic creation of notifications

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -26,7 +26,7 @@
                         </a>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic2" class="notification-dropdown finish-him" style="width: 500px">
                             <div class="noti-list" id="plsWork">
-                                <a class="noti-footer primary text-center d-block border-top border-top-blue-grey border-top-lighten-4 text-bold-400 py-1">Leer todas las notificaciones</a>
+                                <a class="noti-footer primary text-center d-block border-top border-top-blue-grey border-top-lighten-4 text-bold-400 py-1" (click)="clearAllNotifications()">Leer todas las notificaciones</a>
                             </div>
                         </div>
                     </li>
