Added mini user guide pt.1

--- a/src/main/webapp/app/entities/balance-account/balance-account.component.html
+++ b/src/main/webapp/app/entities/balance-account/balance-account.component.html
@@ -1,8 +1,9 @@
 <div>
-    <h2 id="page-heading">
-        <span>Mi balance</span>
-    </h2>
-    <br/>
+    <div class="card-header">
+        <h4 _ngcontent-c24="" class="card-title" id="horz-layout-colored-controls">Mi balance</h4>
+        <p  _ngcontent-c24="" class="mb-0">Cuenta perteneciente a: {{actualBalance.user.name}}</p>
+        <br/>
+    </div>
 <div>
     <div class="col-xl-3 col-lg-6 col-12" style="float: right; display:inline-block;">
         <div class="card bg-danger">
