--- a/src/main/webapp/app/entities/user-app/subadmin-form.component.html
+++ b/src/main/webapp/app/entities/user-app/subadmin-form.component.html
@@ -209,7 +209,7 @@
                                                 <div _ngcontent-c24="" class="custom-control custom-radio custom-control-inline">
                                                     <input type="radio" id="customRadioInline1" value="subadmin"
                                                            name="customRadioInline1" class="custom-control-input"
-                                                           (change)="setRole('subadmin')">
+                                                           (change)="setRole('subadmin')" checked>
                                                     <label class="custom-control-label"
                                                            for="customRadioInline1">Sub-admin</label>
                                                 </div>
