--- a/src/main/webapp/app/user-home/user-home.component.html
+++ b/src/main/webapp/app/user-home/user-home.component.html
@@ -49,6 +49,9 @@
     <div class="card">
         <div class="card-header">
             <h2 class="card-title" id="jhi-institution-heading">{{focusGroup.aptitudeTest.name}}</h2>
+            <p _ngcontent-c24="" class="mb-0">Para poder participar dentro de este grupo de enfoque primero tienes que contestar las preguntas
+                que se muestran a continuación. ¡No te preocupes! La información que se solicita no se registrará en
+                ningún aspecto de la aplicación.</p>
         </div>
         <div class="card-body">
             <div class="px-3">
